--- a/docker/Dockerfile.nvidia
+++ b/docker/Dockerfile.nvidia
@@ -11,7 +11,7 @@ RUN wget https://github.com/deepinsight/insightface/releases/download/v0.7/buffa
         rm -f /tmp/buffalo_l.zip
 
 RUN pip install nvidia-tensorrt
-RUN git clone https://github.com/xaviviro/refacer && cd refacer && pip install -r requirements-GPU.txt
+RUN git clone https://github.com/zona-iptv/refacer && cd refacer && pip install -r requirements-GPU.txt
 
 WORKDIR /refacer
 
